# Summary-Document-Wrapper

./: README.md  basic_examples.py  pyproject.toml  requirements.txt  setup.py
src/document_wrapper_adamllryan/: document.py
src/document_wrapper_adamllryan/analysis/: batch.py  batch_evaluator.py  batch_executor.py  downloader.py  evaluator.py  filter.py  keyframe_extractor.py  sentence_scorer.py  splicer.py  summarizer.py  thresholder.py  transcriber.py
src/document_wrapper_adamllryan/doc/: analysis.py  document.py  segment.py  sentence.py  summarizer.py  track.py
src/document_wrapper_adamllryan/util/: batch.py  downloader.py  video_processor.py
tests/: analysis_test.py  basic_example.py  batch_test.py  document_test.py  output.json  segment_test.py  sentence_test.py  track_test.py  transcript.json  transcriptjson.py
