[project]
name = "document_wrapper_adamllryan"
version = "0.0.1"
authors = [
  { name="Adam Ryan", email="adam@ry3.io" },
]
description = "Small document wrapper for project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp",
    "pyannote.audio",
    "ujson",
    "sentence-transformers",
    "torch",
    "moviepy",
    "spacy",
]

[project.urls]
Homepage = "https://github.com/adamllryan/Summary-Document-Wrapper"
Issues = "https://github.com/adamllryan/Summary-Document-Wrapper/issues"


